remove slash from images url

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <p class="pt-4">If you have any questions contact Kirsty, Priscilla or John-Henry anytime.</p>
       <div class="sm:overflow-hidden sm:rotate-90">
-        <img src="/images/priscilla.png" class="m-4 sm:rotate-45">
+        <img src="images/priscilla.png" class="m-4 sm:rotate-45">
       </div>
       
     </div>
