--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <div class="flex-center">
-    <div class="flex sm:w-1/3 mx-auto flex-col pt-4 text-lg sm:text-2xl items-center text-center px-8">
+    <div class="flex sm:w-96 mx-auto flex-col pt-4 text-lg sm:text-2xl items-center text-center px-8">
 
       <img src="images/main.png" class="pt-8">
       <img src="images/invited.png" class="pt-8">
