changes to food places

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <img src="images/faq-5.png" class="pt-12 pb-4 mr-12">
       <p>We are <u>not</u> gonna feed you so sort yourself out before. Here are some places nearby that we like.</p>
       <br>
-      <p class="font-serif text-2xl">Bella Bruta<br> Nakano Darling<br> Rising Sun<br> Ante Cafe<br> Paci<br> Maccas<br> KFC <br>
+      <p class="font-serif text-2xl">Bella Bruta<br> Nakano Darling<br> Rising Sun<br> Ante <br>Rico's Tacos <br> Cafe Paci<br> Maccas<br> KFC <br>
         or you can just eat at the pub!
         
         <p class="font-serif text-xs pt-4">*(Places may be closed for the holiday season still)</p>
