adding meta to head

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
-</head>
+  <meta property="og:title" content="Kirsty and JH's Wedding">
+  <meta property="og:description" content="Kirsty and JH are getting hitched and you're invited">
+  <meta property="og:image" content="android-chrome-512x512.png">
+  <meta property="og:url" content="http://kirstyjhforever.com">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Kirsty and JH's Wedding">
+  </head>
 <style>
   body {
     font-family: 'Inter', sans-serif;
