--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
         <p class="font-serif text-xs pt-4">*(Places may be closed for the holiday season still)</p>
       <img src="images/faq-6.png" alt="kirsty and jh wedding" class="pt-8 pb-4 ml-12">
-      We have a toaster and heaps of other shit. But if you want you can top up the bar tab on the night!
+      We have a toaster and heaps of other stuff. But if you want you can top up the bar tab on the night!
       <img src="images/faq-7.png" alt="kirsty and jh wedding" class="pt-12 pb-12">
       
       <section id="rsvp">
